v1.1.1/_sources/plc-tmo-motion_nc.rst.txt

NC Settings
-----------

.. csv-table::
    :header: Axis ID, Name
    :align: center

        1, Axis 1 AL1K4-L2SI-MMS
        2, Axis 2
        3, Axis 3
        4, Axis 4
        5, Axis 5
        6, Axis 6 IM1K4-XTES-MMS
        7, Axis 7 IM1K4-XTES-CLZ
        8, Axis 8 IM1K4-XTES-CLF
        9, Axis 9 IM2K4-PPM-MMS
        10, SL1K4-BOTTOM-M10
        11, SL1K4-TOP-M11
        12, SL1K4-NORTH-M12
        13, SL1K4-SOUTH-M13
        14, ST1K4-TEST
        15, Axis 15 IM3K4-PPM-MMS
        16, Axis 16 IM4K4-PPM-MMS
        17, Axis 17 IM5K4-PPM-MMS
        18, Axis 18 PF1K4-WFS_TARGET-MMS-Y
        19, Axis 19 PF1K4-WFS_TARGET-MMS-Z
        20, Axis 20 LI1K4-IP1-MMS
        21, Axis 21 TM1K4-MMS-Y
        22, Axis 22 TM1K4-MMS-X
        23, SL2K4-BOTTOM-M23
        24, SL2K4-TOP-M24
        25, SL2K4-NORTH-M25
        26, SL2K4-SOUTH-M26



Axis 1: Axis 1 AL1K4-L2SI-MMS
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 1
    Name, Axis 1 AL1K4-L2SI-MMS
    AxisFolder, AL1K4-L2SI
    AxisType, 1
    CreateSymbols, true
    Dynamic:Acceleration, 200
    Dynamic:AccelerationMaximum, 200
    Dynamic:Deceleration, 200
    Dynamic:DecelerationMaximum, 200
    Dynamic:DelayTime, 0.004
    Dynamic:Jerk, 500
    Enc:EncType, 29
    Enc:Inc:RefSoftSyncMask, #x0000ffff
    Enc:MaxCount, #xffffffff
    Enc:Offset, -214686.941
    Enc:ReferenceSystem, 1
    Enc:ScaleFactorNumerator, 5e-05
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMaxControl:Range, -33.49
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -108.74
    Id, 1
    OtherSettings:AllowMotionCmdToSlave, true
    TargetPosControl:Range, 0.002
    TargetPosControl:Time, 2
    Velo:Maximum, 10



Axis 2: Axis 2
^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 2
    Name, Axis 2
    AxisFolder, SPARE
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 2
    OtherSettings:AllowMotionCmdToSlave, true



Axis 3: Axis 3
^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 3
    Name, Axis 3
    AxisFolder, SPARE
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 3
    OtherSettings:AllowMotionCmdToSlave, true



Axis 4: Axis 4
^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 4
    Name, Axis 4
    AxisFolder, SPARE
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 4
    OtherSettings:AllowMotionCmdToSlave, true



Axis 5: Axis 5
^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 5
    Name, Axis 5
    AxisFolder, SPARE
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 5
    OtherSettings:AllowMotionCmdToSlave, true



Axis 6: Axis 6 IM1K4-XTES-MMS
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 6
    Name, Axis 6 IM1K4-XTES-MMS
    AxisFolder, SPARE
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 29
    Enc:Inc:RefSoftSyncMask, #x00000000
    Enc:MaxCount, #x00400000
    Enc:Offset, -398.1892
    Enc:ReferenceSystem, 1
    Enc:ScaleFactorNumerator, 5e-05
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -90
    Id, 6
    OtherSettings:AllowMotionCmdToSlave, true
    Velo:Maximum, 10



Axis 7: Axis 7 IM1K4-XTES-CLZ
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 7
    Name, Axis 7 IM1K4-XTES-CLZ
    AxisFolder, SPARE
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 4
    Enc:Inc:RefSoftSyncMask, #x0000ffff
    Enc:MaxCount, #x0000ffff
    Enc:ScaleFactorNumerator, 0.003
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMaxControl:Range, 100
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -100
    General:UnitName, %
    Id, 7
    OtherSettings:AllowMotionCmdToSlave, true
    Velo:Maximum, 10



Axis 8: Axis 8 IM1K4-XTES-CLF
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 8
    Name, Axis 8 IM1K4-XTES-CLF
    AxisFolder, SPARE
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 4
    Enc:Inc:RefSoftSyncMask, #x0000ffff
    Enc:MaxCount, #x0000ffff
    Enc:ScaleFactorNumerator, 0.008
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMaxControl:Range, 100
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -100
    General:UnitName, %
    Id, 8
    OtherSettings:AllowMotionCmdToSlave, true
    Velo:Maximum, 10



Axis 9: Axis 9 IM2K4-PPM-MMS
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 9
    Name, Axis 9 IM2K4-PPM-MMS
    AxisFolder, IM2K4-PPM
    AxisType, 1
    CreateSymbols, true
    Dynamic:Acceleration, 200
    Dynamic:AccelerationMaximum, 200
    Dynamic:Deceleration, 200
    Dynamic:DecelerationMaximum, 200
    Dynamic:DelayTime, 0.004
    Dynamic:Jerk, 500
    Enc:EncType, 29
    Enc:Inc:RefSoftSyncMask, #x00000000
    Enc:MaxCount, #x00400000
    Enc:Offset, -358.0066
    Enc:ReferenceSystem, 1
    Enc:ScaleFactorNumerator, 5e-05
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMaxControl:Range, -7.67
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -100.57
    Id, 9
    OtherSettings:AllowMotionCmdToSlave, true
    TargetPosControl:Range, 0.002
    TargetPosControl:Time, 2
    Velo:Maximum, 65



Axis 10: SL1K4-BOTTOM-M10
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 10
    Name, SL1K4-BOTTOM-M10
    AxisFolder, SL1K4-SCATTER
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 4
    Enc:Inc:RefSoftSyncMask, #x0000ffff
    Enc:MaxCount, #x0000ffff
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -31.51
    Id, 10
    OtherSettings:AllowMotionCmdToSlave, true
    Velo:Maximum, 2.2
    Velo:RefSearch, 0.2
    Velo:RefSync, 0.05



Axis 11: SL1K4-TOP-M11
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 11
    Name, SL1K4-TOP-M11
    AxisFolder, SL1K4-SCATTER
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 4
    Enc:Inc:RefSoftSyncMask, #x0000ffff
    Enc:Inverse, true
    Enc:MaxCount, #x0000ffff
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -31.99
    Id, 11
    OtherSettings:AllowMotionCmdToSlave, true
    Velo:Maximum, 2.2
    Velo:RefSearch, 0.2
    Velo:RefSync, 0.05



Axis 12: SL1K4-NORTH-M12
^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 12
    Name, SL1K4-NORTH-M12
    AxisFolder, SL1K4-SCATTER
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 4
    Enc:Inc:RefSoftSyncMask, #x0000ffff
    Enc:Inverse, true
    Enc:MaxCount, #x0000ffff
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -31.5
    Id, 12
    OtherSettings:AllowMotionCmdToSlave, true
    Velo:Maximum, 2.2
    Velo:RefSearch, 0.2
    Velo:RefSync, 0.05



Axis 13: SL1K4-SOUTH-M13
^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 13
    Name, SL1K4-SOUTH-M13
    AxisFolder, SL1K4-SCATTER
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 4
    Enc:Inc:RefSoftSyncMask, #x0000ffff
    Enc:MaxCount, #x0000ffff
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -30.29
    Id, 13
    OtherSettings:AllowMotionCmdToSlave, true
    Velo:Maximum, 2.2
    Velo:RefSearch, 0.2
    Velo:RefSync, 0.05



Axis 14: ST1K4-TEST
^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 14
    Name, ST1K4-TEST
    AxisFolder, ST1K4-TEST
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 4
    Enc:Inc:RefSoftSyncMask, #x0000ffff
    Enc:Inverse, true
    Enc:MaxCount, #x0000ffff
    Enc:ScaleFactorNumerator, 0.000390625
    Id, 14
    OtherSettings:AllowMotionCmdToSlave, true
    Velo:FastManual, 5
    Velo:Maximum, 50
    Velo:RefSearch, 5
    Velo:RefSync, 5
    Velo:SlowManual, 1



Axis 15: Axis 15 IM3K4-PPM-MMS
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 15
    Name, Axis 15 IM3K4-PPM-MMS
    AxisFolder, IM3K4-PPM
    AxisType, 1
    CreateSymbols, true
    Dynamic:Acceleration, 200
    Dynamic:AccelerationMaximum, 200
    Dynamic:Deceleration, 200
    Dynamic:DecelerationMaximum, 200
    Dynamic:DelayTime, 0.004
    Dynamic:Jerk, 500
    Enc:EncType, 29
    Enc:MaxCount, #x00400000
    Enc:Offset, -358.0066
    Enc:ReferenceSystem, 1
    Enc:ScaleFactorNumerator, 5e-05
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMaxControl:Range, -5.69
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -97.98
    Id, 15
    OtherSettings:AllowMotionCmdToSlave, true
    TargetPosControl:Range, 0.002
    TargetPosControl:Time, 2
    Velo:Maximum, 65



Axis 16: Axis 16 IM4K4-PPM-MMS
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 16
    Name, Axis 16 IM4K4-PPM-MMS
    AxisFolder, IM4K4-PPM
    AxisType, 1
    CreateSymbols, true
    Dynamic:Acceleration, 200
    Dynamic:AccelerationMaximum, 200
    Dynamic:Deceleration, 200
    Dynamic:DecelerationMaximum, 200
    Dynamic:DelayTime, 0.004
    Dynamic:Jerk, 500
    Enc:EncType, 29
    Enc:MaxCount, #x00400000
    Enc:Offset, -358.0066
    Enc:ReferenceSystem, 1
    Enc:ScaleFactorNumerator, 5e-05
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMaxControl:Range, -8.43
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -99.53
    Id, 16
    OtherSettings:AllowMotionCmdToSlave, true
    TargetPosControl:Range, 0.002
    TargetPosControl:Time, 2
    Velo:Maximum, 65



Axis 17: Axis 17 IM5K4-PPM-MMS
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 17
    Name, Axis 17 IM5K4-PPM-MMS
    AxisFolder, IM5K4-PPM
    AxisType, 1
    CreateSymbols, true
    Dynamic:Acceleration, 200
    Dynamic:AccelerationMaximum, 200
    Dynamic:Deceleration, 200
    Dynamic:DecelerationMaximum, 200
    Dynamic:DelayTime, 0.004
    Dynamic:Jerk, 500
    Enc:EncType, 29
    Enc:MaxCount, #x00400000
    Enc:Offset, -358.0066
    Enc:ReferenceSystem, 1
    Enc:ScaleFactorNumerator, 5e-05
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMaxControl:Range, -4.42
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -97.47
    Id, 17
    OtherSettings:AllowMotionCmdToSlave, true
    TargetPosControl:Range, 0.002
    TargetPosControl:Time, 2
    Velo:Maximum, 65



Axis 18: Axis 18 PF1K4-WFS_TARGET-MMS-Y
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 18
    Name, Axis 18 PF1K4-WFS_TARGET-MMS-Y
    AxisFolder, PF1K4-WFS_TARGET
    AxisType, 1
    CreateSymbols, true
    Dynamic:Acceleration, 10
    Dynamic:AccelerationMaximum, 200
    Dynamic:Deceleration, 10
    Dynamic:DecelerationMaximum, 200
    Dynamic:DelayTime, 0.004
    Dynamic:Jerk, 500
    Enc:EncType, 29
    Enc:MaxCount, #x00400000
    Enc:Offset, -358.0066
    Enc:ReferenceSystem, 1
    Enc:ScaleFactorNumerator, 5e-05
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMaxControl:Range, -9.71
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -99.33
    Id, 18
    OtherSettings:AllowMotionCmdToSlave, true
    TargetPosControl:Range, 0.002
    TargetPosControl:Time, 2
    Velo:Maximum, 20



Axis 19: Axis 19 PF1K4-WFS_TARGET-MMS-Z
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 19
    Name, Axis 19 PF1K4-WFS_TARGET-MMS-Z
    AxisFolder, PF1K4-WFS_TARGET
    AxisType, 1
    CreateSymbols, true
    Dynamic:Acceleration, 10
    Dynamic:AccelerationMaximum, 200
    Dynamic:Deceleration, 50
    Dynamic:DecelerationMaximum, 200
    Dynamic:Jerk, 500
    Enc:EncType, 29
    Enc:MaxCount, #x00400000
    Enc:ReferenceSystem, 1
    Enc:ScaleFactorNumerator, 5e-05
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMaxControl:Range, 56
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, 6.5
    Id, 19
    OtherSettings:AllowMotionCmdToSlave, true
    Velo:Maximum, 5



Axis 20: Axis 20 LI1K4-IP1-MMS
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 20
    Name, Axis 20 LI1K4-IP1-MMS
    AxisFolder, LI1K4-IP1
    AxisType, 1
    CreateSymbols, true
    Dynamic:Acceleration, 200
    Dynamic:AccelerationMaximum, 200
    Dynamic:Deceleration, 200
    Dynamic:DecelerationMaximum, 200
    Dynamic:DelayTime, 0.004
    Dynamic:Jerk, 500
    Enc:EncType, 29
    Enc:MaxCount, #x00400000
    Enc:Offset, -358.0066
    Enc:ReferenceSystem, 1
    Enc:ScaleFactorNumerator, 5e-05
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMaxControl:Range, 1.35
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -107.43
    Id, 20
    OtherSettings:AllowMotionCmdToSlave, true
    TargetPosControl:Range, 0.002
    TargetPosControl:Time, 2
    Velo:Maximum, 65



Axis 21: Axis 21 TM1K4-MMS-Y
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 21
    Name, Axis 21 TM1K4-MMS-Y
    AxisFolder, TM1K4
    AxisType, 1
    CreateSymbols, true
    Dynamic:Acceleration, 10
    Dynamic:AccelerationMaximum, 200
    Dynamic:Deceleration, 10
    Dynamic:DecelerationMaximum, 200
    Dynamic:DelayTime, 0.004
    Dynamic:Jerk, 500
    Enc:EncType, 29
    Enc:MaxCount, #x00400000
    Enc:Offset, -358.0066
    Enc:ReferenceSystem, 1
    Enc:ScaleFactorNumerator, 5e-05
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMaxControl:Range, 1.41
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -102.55
    Id, 21
    OtherSettings:AllowMotionCmdToSlave, true
    TargetPosControl:Range, 0.002
    TargetPosControl:Time, 2
    Velo:Maximum, 20



Axis 22: Axis 22 TM1K4-MMS-X
^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 22
    Name, Axis 22 TM1K4-MMS-X
    AxisFolder, TM1K4
    AxisType, 1
    CreateSymbols, true
    Dynamic:Acceleration, 10
    Dynamic:AccelerationMaximum, 200
    Dynamic:Deceleration, 50
    Dynamic:DecelerationMaximum, 200
    Dynamic:Jerk, 500
    Enc:EncType, 29
    Enc:MaxCount, #x00400000
    Enc:ReferenceSystem, 1
    Enc:ScaleFactorNumerator, 5e-05
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMaxControl:Range, 12.5
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, 8.1
    Id, 22
    OtherSettings:AllowMotionCmdToSlave, true
    Velo:Maximum, 5



Axis 23: SL2K4-BOTTOM-M23
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 23
    Name, SL2K4-BOTTOM-M23
    AxisFolder, SL2K4-SCATTER
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 4
    Enc:Inc:RefSoftSyncMask, #x0000ffff
    Enc:MaxCount, #x0000ffff
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -30.61
    Id, 23
    OtherSettings:AllowMotionCmdToSlave, true
    Velo:Maximum, 2.2
    Velo:RefSearch, 0.2
    Velo:RefSync, 0.05



Axis 24: SL2K4-TOP-M24
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 24
    Name, SL2K4-TOP-M24
    AxisFolder, SL2K4-SCATTER
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 4
    Enc:Inc:RefSoftSyncMask, #x0000ffff
    Enc:Inverse, true
    Enc:MaxCount, #x0000ffff
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -30.91
    Id, 24
    OtherSettings:AllowMotionCmdToSlave, true
    PositionAreaControl:Range, 0.5
    TargetPosControl:Range, 0.1
    Velo:Maximum, 2.2
    Velo:RefSearch, 0.2
    Velo:RefSync, 0.05



Axis 25: SL2K4-NORTH-M25
^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 25
    Name, SL2K4-NORTH-M25
    AxisFolder, SL2K4-SCATTER
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 4
    Enc:Inc:RefSoftSyncMask, #x0000ffff
    Enc:Inverse, true
    Enc:MaxCount, #x0000ffff
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -30.81
    Id, 25
    OtherSettings:AllowMotionCmdToSlave, true
    Velo:Maximum, 2.2
    Velo:RefSearch, 0.2
    Velo:RefSync, 0.05



Axis 26: SL2K4-SOUTH-M26
^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 26
    Name, SL2K4-SOUTH-M26
    AxisFolder, SL2K4-SCATTER
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 4
    Enc:Inc:RefSoftSyncMask, #x0000ffff
    Enc:MaxCount, #x0000ffff
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, -30.52
    Id, 26
    OtherSettings:AllowMotionCmdToSlave, true
    Velo:Maximum, 2.2
    Velo:RefSearch, 0.2
    Velo:RefSync, 0.05


